Fix input text overflow

--- a/src/components/InputBar/InputBar.css
+++ b/src/components/InputBar/InputBar.css
@@ -9,16 +9,18 @@
 .inputBar{
     border: 0;
     border-radius: 15px;
+    box-sizing: border-box;
     margin-left: 5px;
     outline: none;
     padding: 10px;
-    width: 90%;
+    width: 85%;
 }
 
 .send-button{
     background-color: rgb(0, 173, 231);
     border: 0;
     border-radius: 0px 15px 15px 0px;
+    box-sizing: border-box;
     color: #fff;
     cursor: pointer;
     height: 102%; /* Fix this */
@@ -27,6 +29,7 @@
     right: -1px;
     top: -0.25px; /* Fix this */
     transition: filter 0.3s;
+    width: 15%;
 }
 
 .send-button:hover{
